// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET - http://localhost:5000/characters 1`] = `
Object {
  "body": Array [
    Object {
      "id": 1,
      "name": "Luffy",
    },
    Object {
      "id": 2,
      "name": "Zoro",
    },
    Object {
      "id": 3,
      "name": "Kirito",
    },
  ],
  "description": "",
  "headers": Object {
    "connection": "close",
    "content-length": "73",
    "content-type": "application/json; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/characters/1 1`] = `
Object {
  "body": Object {
    "id": 1,
    "name": "Luffy",
  },
  "description": "Tu crois que c'est du respect mon garçon ?",
  "headers": Object {
    "connection": "close",
    "content-length": "23",
    "content-type": "application/json; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`GET - http://localhost:5000/characters/name-querystring 1`] = `
Object {
  "body": Object {
    "id": 3,
    "name": "Kirito",
  },
  "description": "Tu crois que c'est du respect mon garçon ?",
  "headers": Object {
    "connection": "close",
    "content-length": "24",
    "content-type": "application/json; charset=utf-8",
  },
  "statusCode": 200,
}
`;

exports[`POST - http://localhost:4000 1`] = `[TypeError: The \`body\` option must be a stream.Readable, string or Buffer]`;

exports[`POST - http://localhost:5000/characters 1`] = `[HTTPError: Response code 401 (Unauthorized)]`;
